--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,9 +12,74 @@
 	</head>
 	<body>
     <!--[if lt IE 10]>
-		<p class="browserupgrade">你正在使用过时的浏览器，请 <a href="http://browsehappy.com/">升级你的浏览器</a> 来感受更好的上网体验。</p>
+		<p class="browsehappy"><%= I18n.t "browse_happy.part1" %> <a href="http://browsehappy.com/"><%= I18n.t "browse_happy.part2" %></a> <%= I18n.t "browse_happy.part3" %></p>
 		<![endif]-->
+		<header>
+			<div class="wrapper">
+				<h1>
+					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="/">
+						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="/images/logo.png">
+					</a>
+				</h1>
+				<ul>
+					<li>
+						<a title="<%= I18n.t :products %>" href="/">
+							<div class="icon"><i class="fa fa-home"></i></div>
+							<div class="text"><%= I18n.t :products %></div>
+						</a>
+					</li>
+					<li>
+						<a title="<%= I18n.t :guides %>" href="/">
+							<div class="icon"><i class="fa fa-book"></i></div>
+							<div class="text"><%= I18n.t :guides %></div>
+						</a>
+					</li>
+					<li>
+						<a title="<%= I18n.t :support %>" href="/">
+							<div class="icon"><i class="fa fa-support"></i></div>
+							<div class="text"><%= I18n.t :support %></div>
+						</a>
+					</li>
+					<li>
+						<a title="<%= I18n.t :language %>" href="<%= I18n.t :site_url %>">
+							<div class="icon"><i class="fa fa-language"></i></div>
+							<div class="text"><%= I18n.t :language %></div>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</header>
+		
 		<%= yield %>
+
+		<footer>
+			<div class="wrapper">
+				<h2>
+					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="/">
+						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="/images/logo-square.png">
+						<span><%= I18n.t :slogan %></span>
+					</a>
+				</h2>
+				<ul>
+					<li>
+						<a title="<%= I18n.t :email %>" href="/">
+							<i class="fa fa-envelope"></i>
+						</a>
+					</li>
+					<li>
+						<a title="<%= I18n.t :weibo %>" href="/">
+							<i class="fa fa-weibo"></i>
+						</a>
+					</li>
+					<li>
+						<a title="<%= I18n.t :twitter %>" href="/">
+							<i class="fa fa-twitter"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
+
     <script>
         (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
         function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
