--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,7 +18,7 @@
 			<div class="wrapper">
 				<h1>
 					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="/">
-						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="/images/logo.png">
+						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo.png">
 					</a>
 				</h1>
 				<ul>
@@ -47,6 +47,7 @@
 						</a>
 					</li>
 				</ul>
+				<div class="clearfix"></div>
 			</div>
 		</header>
 		
@@ -56,7 +57,7 @@
 			<div class="wrapper">
 				<h2>
 					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="/">
-						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="/images/logo-square.png">
+						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo-square.png">
 						<span><%= I18n.t :slogan %></span>
 					</a>
 				</h2>
@@ -77,6 +78,7 @@
 						</a>
 					</li>
 				</ul>
+				<div class="clearfix"></div>
 			</div>
 		</footer>
 
