--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -3,23 +3,28 @@ title: Wuhoo
 description: Awesome apps for healthy lifestyle
 ---
 
-<section>
-	<div>
-		<div>
-			<h2><%= I18n.t "calorie_ios.name" %></h2>
+<section id="products">
+	<div class="wrapper">
+		<a title="<%= I18n.t "calorie_ios.name" %>" href="/">
+			<img alt="<%= I18n.t "calorie_ios.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-ios.png">
+			<h3><%= I18n.t "calorie_ios.name" %></h3>
 			<p><%= I18n.t "calorie_ios.device" %></p>
-		</div>
-		<div>
-			<h2><%= I18n.t "calorie_mac.name" %></h2>
+		</a>
+		<a title="<%= I18n.t "calorie_mac.name" %>" href="/">
+			<img alt="<%= I18n.t "calorie_mac.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-mac.png">
+			<h3><%= I18n.t "calorie_mac.name" %></h3>
 			<p><%= I18n.t "calorie_mac.device" %></p>
-		</div>
-		<div>
-			<h2><%= I18n.t "track_iphone.name" %></h2>
+		</a>
+		<a title="<%= I18n.t "track_iphone.name" %>" href="/">
+			<img alt="<%= I18n.t "track_iphone.name" %>" src="<%= data.site.image_base_url %>/icon-track-iphone.png">
+			<h3><%= I18n.t "track_iphone.name" %></h3>
 			<p><%= I18n.t "track_iphone.device" %></p>
-		</div>
-		<div>
-			<h2><%= I18n.t "timer_ios.name" %></h2>
+		</a>
+		<a title="<%= I18n.t "timer_ios.name" %>" href="/">
+			<img alt="<%= I18n.t "timer_ios.name" %>" src="<%= data.site.image_base_url %>/icon-timer-iphone.png">
+			<h3><%= I18n.t "timer_ios.name" %></h3>
 			<p><%= I18n.t "timer_ios.device" %></p>
-		</div>
+		</a>
+		<div class="clearfix"></div>
 	</div>
 </section>
