--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -5,25 +5,25 @@ description: Awesome apps for healthy lifestyle
 
 <section id="products">
 	<div class="wrapper">
-		<a title="<%= I18n.t "calorie_ios.name" %>" href="/">
-			<img alt="<%= I18n.t "calorie_ios.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-ios.png">
-			<h3><%= I18n.t "calorie_ios.name" %></h3>
-			<p><%= I18n.t "calorie_ios.device" %></p>
+		<a title="<%= I18n.t "products.calorie_ios.name" %>" href="/calorie.html">
+			<img alt="<%= I18n.t "products.calorie_ios.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-ios.png">
+			<h3><%= I18n.t "products.calorie_ios.name" %></h3>
+			<p><%= I18n.t "products.calorie_ios.device" %></p>
 		</a>
-		<a title="<%= I18n.t "calorie_mac.name" %>" href="/">
-			<img alt="<%= I18n.t "calorie_mac.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-mac.png">
-			<h3><%= I18n.t "calorie_mac.name" %></h3>
-			<p><%= I18n.t "calorie_mac.device" %></p>
+		<a title="<%= I18n.t "products.calorie_mac.name" %>" href="/">
+			<img alt="<%= I18n.t "products.calorie_mac.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-mac.png">
+			<h3><%= I18n.t "products.calorie_mac.name" %></h3>
+			<p><%= I18n.t "products.calorie_mac.device" %></p>
 		</a>
-		<a title="<%= I18n.t "track_iphone.name" %>" href="/">
-			<img alt="<%= I18n.t "track_iphone.name" %>" src="<%= data.site.image_base_url %>/icon-track-iphone.png">
-			<h3><%= I18n.t "track_iphone.name" %></h3>
-			<p><%= I18n.t "track_iphone.device" %></p>
+		<a title="<%= I18n.t "products.track_iphone.name" %>" href="/track.html">
+			<img alt="<%= I18n.t "products.track_iphone.name" %>" src="<%= data.site.image_base_url %>/icon-track-iphone.png">
+			<h3><%= I18n.t "products.track_iphone.name" %></h3>
+			<p><%= I18n.t "products.track_iphone.device" %></p>
 		</a>
-		<a title="<%= I18n.t "timer_ios.name" %>" href="/">
-			<img alt="<%= I18n.t "timer_ios.name" %>" src="<%= data.site.image_base_url %>/icon-timer-iphone.png">
-			<h3><%= I18n.t "timer_ios.name" %></h3>
-			<p><%= I18n.t "timer_ios.device" %></p>
+		<a title="<%= I18n.t "products.timer_ios.name" %>" href="/">
+			<img alt="<%= I18n.t "products.timer_ios.name" %>" src="<%= data.site.image_base_url %>/icon-timer-iphone.png">
+			<h3><%= I18n.t "products.timer_ios.name" %></h3>
+			<p><%= I18n.t "products.timer_ios.device" %></p>
 		</a>
 		<div class="clearfix"></div>
 	</div>
