--- a/source/stylesheets/_common.scss
+++ b/source/stylesheets/_common.scss
@@ -3,3 +3,127 @@
 	-moz-border-radius: $radius;
 	border-radius: $radius;
 }
+
+@mixin product_banner($background) {
+  text-align: center;
+  img {
+    max-width: 100%;
+    width: 204px;
+    height: 204px;
+    margin-top: 40px;
+  }
+  h1 {
+    color: #fff;
+    margin: 30px 0 0 0;
+  }
+  h2 {
+    font-weight: normal;
+    color: #fff;
+    margin: 0;
+  }
+  div {
+		background: image-url($background) no-repeat center center;
+		background-size: cover;
+		height: 500px;
+  }
+	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    img {
+      width: 164px;
+      height: 164px;
+      margin-top: 80px;
+    }
+  }
+	@media only screen and (max-width: 600px) {
+    img {
+      width: 164px;
+      height: 164px;
+      margin-top: 80px;
+    }
+  }
+}
+
+@mixin product_screenshot($width, $height) {
+  background-color: #fff;
+  text-align: center;
+  padding: 100px 0;
+  img {
+    max-width: 100%;
+    width: $width;
+    height: $height;
+  }
+	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    img {
+      width: $width * 0.8;
+      height: $height * 0.8;
+    }
+  }
+	@media screen and (max-width: 600px) {
+    padding: 40px 0;
+    img {
+      width: $width * 0.35;
+      height: $height * 0.35;
+    }
+	}
+}
+
+@mixin product_feature($color) {
+  background-color: #fff;
+  padding: 0 0 100px 0;
+	div.item {
+		@include column(3);
+		h4 {
+			margin: 0;
+			color: $color;
+			font-weight: normal;
+			i {
+				margin-right: 15px;
+			}
+		}
+		p {
+			margin: 18px 0 36px 0;
+			color: $text-color;
+      line-height: 160%;
+		}
+	}
+  @media screen and (max-width: 600px) {
+    padding: 0 0 40px 0;
+    div.item {
+			float: none;
+			display: block;
+      width: 100%;
+      h4 {
+        text-align: center;
+      }
+    }
+  }
+}
+
+@mixin product_buy($color) {
+  background-color: #fff;
+  text-align: center;
+  padding: 0 0 100px 0;
+	a {
+		padding: 15px 5%;
+		height: 60px;
+		line-height: 60px;
+		background-color: $color;
+		color: #fff;
+		font-size: em(31.98px);
+    font-weight: bold;
+		text-decoration:none;
+		-webkit-border-radius: 10px;
+		-moz-border-radius: 10px;
+		border-radius: 10px;
+	}
+}
+
+@mixin product_secondary($color) {
+	background-color: #fff;
+	text-align: center;
+	padding: 0 0 100px 0;
+	a {
+		color: $color;
+		font-size: em(22.62px);
+		text-decoration: none;
+	}
+}
