page title and description, locale path for site navigation, change brand slogan

--- a/source/localizable/support.html.erb
+++ b/source/localizable/support.html.erb
@@ -1,12 +1,11 @@
 ---
-title: Wuhoo
-description: Awesome apps for healthy lifestyle
+name: support
 ---
 
 <section id="support">
 	<div class="wrapper">
 		<div class="item">
-			<a title="<%= I18n.t "support.guides.title" %>" href="/">
+			<a title="<%= I18n.t "support.guides.title" %>" href="<%= locale_path "guides" %>">
 				<i class="fa fa-book"></i>
 				<h4><%= I18n.t "support.guides.title" %></h4>
 				<p><%= I18n.t "support.guides.description" %></p>
