--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title><%= current_page.data.title %></title>
-		<meta name="description" content="<%= current_page.data.description %>">
+		<title><%= I18n.t "#{ current_page.data.name }.title" %></title>
+		<meta name="description" content="<%= I18n.t "#{ current_page.data.name }.description" %>">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
     <%= stylesheet_link_tag :site %>
@@ -17,33 +17,33 @@
 		<header id="<%= current_page.data.header || "default" %>">
 			<div class="wrapper">
 				<h1>
-					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="/">
+					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="<%= locale_path "/" %>">
 						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo.png">
 					</a>
 				</h1>
 				<ul>
 					<li>
-						<a title="<%= I18n.t "products.title" %>" href="/">
+						<a title="<%= I18n.t "products.title" %>" href="<%= locale_path "/" %>">
 							<div class="icon"><i class="fa fa-home"></i></div>
-							<div class="text"><%= I18n.t "products.title" %></div>
+							<div class="text"><%= I18n.t "products.name" %></div>
 						</a>
 					</li>
 					<li>
-						<a title="<%= I18n.t "guides.title" %>" href="/">
+						<a title="<%= I18n.t "guides.title" %>" href="<%= locale_path "guides" %>">
 							<div class="icon"><i class="fa fa-book"></i></div>
-							<div class="text"><%= I18n.t "guides.title" %></div>
+							<div class="text"><%= I18n.t "guides.name" %></div>
 						</a>
 					</li>
 					<li>
-						<a title="<%= I18n.t "support.title" %>" href="/support.html">
+						<a title="<%= I18n.t "support.title" %>" href="<%= locale_path "support" %>">
 							<div class="icon"><i class="fa fa-support"></i></div>
-							<div class="text"><%= I18n.t "support.title" %></div>
+							<div class="text"><%= I18n.t "support.name" %></div>
 						</a>
 					</li>
 					<li>
-						<a title="<%= I18n.t :language %>" href="<%= I18n.t :site_url %>">
+						<a title="<%= I18n.t "language.title" %>" href="<%= I18n.t :site_url %>">
 							<div class="icon"><i class="fa fa-language"></i></div>
-							<div class="text"><%= I18n.t :language %></div>
+							<div class="text"><%= I18n.t "language.name" %></div>
 						</a>
 					</li>
 				</ul>
@@ -56,7 +56,7 @@
 		<footer>
 			<div class="wrapper">
 				<h2>
-					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="/">
+					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="<%= locale_path "/" %>">
 						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo-square.png">
 						<span><%= I18n.t :slogan %></span>
 					</a>
