--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -1,26 +1,25 @@
 ---
-title: Wuhoo
-description: Awesome apps for healthy lifestyle
+name: products
 ---
 
 <section id="products">
 	<div class="wrapper">
-		<a title="<%= I18n.t "products.calorie_ios.name" %>" href="/calorie.html">
+		<a title="<%= I18n.t "products.calorie_ios.name" %>" href="<%= locale_path "ios/calorie" %>">
 			<img alt="<%= I18n.t "products.calorie_ios.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-ios.png">
 			<h3><%= I18n.t "products.calorie_ios.name" %></h3>
 			<p><%= I18n.t "products.calorie_ios.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.calorie_mac.name" %>" href="/">
+		<a title="<%= I18n.t "products.calorie_mac.name" %>" href="<%= locale_path "mac/calorie" %>">
 			<img alt="<%= I18n.t "products.calorie_mac.name" %>" src="<%= data.site.image_base_url %>/icon-calorie-mac.png">
 			<h3><%= I18n.t "products.calorie_mac.name" %></h3>
 			<p><%= I18n.t "products.calorie_mac.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.track_iphone.name" %>" href="/track.html">
+		<a title="<%= I18n.t "products.track_iphone.name" %>" href="<%= locale_path "iphone/track" %>">
 			<img alt="<%= I18n.t "products.track_iphone.name" %>" src="<%= data.site.image_base_url %>/icon-track-iphone.png">
 			<h3><%= I18n.t "products.track_iphone.name" %></h3>
 			<p><%= I18n.t "products.track_iphone.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.timer_ios.name" %>" href="/">
+		<a title="<%= I18n.t "products.timer_ios.name" %>" href="#">
 			<img alt="<%= I18n.t "products.timer_ios.name" %>" src="<%= data.site.image_base_url %>/icon-timer-iphone.png">
 			<h3><%= I18n.t "products.timer_ios.name" %></h3>
 			<p><%= I18n.t "products.timer_ios.device" %></p>
