--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,84 +11,8 @@
     <%= javascript_include_tag "modernizr-2.8.3.min" %>
 	</head>
 	<body>
-    <!--[if lt IE 10]>
-		<p class="browsehappy"><%= I18n.t "browse_happy.part1" %> <a href="http://browsehappy.com/"><%= I18n.t "browse_happy.part2" %></a> <%= I18n.t "browse_happy.part3" %></p>
-		<![endif]-->
-		<header id="<%= current_page.data.header || "default" %>">
-			<div class="wrapper">
-				<h1>
-					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="<%= locale_path "/" %>">
-						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo.png">
-					</a>
-				</h1>
-				<ul>
-					<li>
-						<a title="<%= I18n.t "products.title" %>" href="<%= locale_path "/" %>">
-							<div class="icon"><i class="fa fa-home"></i></div>
-							<div class="text"><%= I18n.t "products.name" %></div>
-						</a>
-					</li>
-					<li>
-						<a title="<%= I18n.t "guides.title" %>" href="<%= locale_path "guides" %>">
-							<div class="icon"><i class="fa fa-book"></i></div>
-							<div class="text"><%= I18n.t "guides.name" %></div>
-						</a>
-					</li>
-					<li>
-						<a title="<%= I18n.t "support.title" %>" href="<%= locale_path "support" %>">
-							<div class="icon"><i class="fa fa-support"></i></div>
-							<div class="text"><%= I18n.t "support.name" %></div>
-						</a>
-					</li>
-					<li>
-						<a title="<%= I18n.t "language.title" %>" href="<%= I18n.t :site_url %>">
-							<div class="icon"><i class="fa fa-language"></i></div>
-							<div class="text"><%= I18n.t "language.name" %></div>
-						</a>
-					</li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-		</header>
-		
+		<%= partial "header" %> 
 		<%= yield %>
-
-		<footer>
-			<div class="wrapper">
-				<h2>
-					<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="<%= locale_path "/" %>">
-						<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo-square.png">
-						<span><%= I18n.t :slogan %></span>
-					</a>
-				</h2>
-				<ul>
-					<li>
-						<a title="<%= I18n.t :email %>" href="/">
-							<i class="fa fa-envelope"></i>
-						</a>
-					</li>
-					<li>
-						<a title="<%= I18n.t :weibo %>" href="/">
-							<i class="fa fa-weibo"></i>
-						</a>
-					</li>
-					<li>
-						<a title="<%= I18n.t :twitter %>" href="/">
-							<i class="fa fa-twitter"></i>
-						</a>
-					</li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-		</footer>
-
-    <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-33658695-1');ga('send','pageview');
-    </script>
+		<%= partial "footer" %>
 	</body>
 </html>
