--- a/source/stylesheets/_common.scss
+++ b/source/stylesheets/_common.scss
@@ -1,3 +1,41 @@
+$image-base-url: "http://7xr7i8.com1.z0.glb.clouddn.com";
+
+$open-sans: "open-sans", sans-serif;
+$base-font-size: 16px;
+$small-font-size:  $base-font-size * 0.875;
+$base-line-height: 1.4;
+
+$spacing-unit: 30px;
+
+$brand-color: #E60012;
+$text-color: #4C4C4C;
+$dark-color: #000000;
+$light-dark-color: #222222;
+$light-color: #FFFFFF;
+$grey-color: #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
+
+$calorie-brand-color: #ea5520;
+$track-brand-color: #C4D700;
+
+@function em($px, $base: $base-font-size) {
+    @return ($px / $base) * 1em;
+}
+
+@mixin media-query($device) {
+	@if $device == phone {
+		@media screen and (max-width: 600px) {
+			@content;
+		}
+	}
+	@else if $device == pad {
+		@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+			@content;
+		}
+	}
+}
+
 @mixin round_corner($radius) {
 	-webkit-border-radius: $radius;
 	-moz-border-radius: $radius;
@@ -26,14 +64,14 @@
 		background-size: cover;
 		height: 500px;
   }
-	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+	@include media-query(pad) {
     img {
       width: 164px;
       height: 164px;
       margin-top: 80px;
     }
   }
-	@media only screen and (max-width: 600px) {
+	@include media-query(phone) {
     img {
       width: 164px;
       height: 164px;
@@ -51,13 +89,13 @@
     width: $width;
     height: $height;
   }
-	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+	@include media-query(pad) {
     img {
       width: $width * 0.8;
       height: $height * 0.8;
     }
   }
-	@media screen and (max-width: 600px) {
+	@include media-query(phone) {
     padding: 40px 0;
     img {
       width: $width * 0.35;
@@ -85,7 +123,7 @@
       line-height: 160%;
 		}
 	}
-  @media screen and (max-width: 600px) {
+	@include media-query(phone) {
     padding: 0 0 40px 0;
     div.item {
 			float: none;
