migrate knowledges to guides, make site responsive

--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -15,7 +15,7 @@
 		<section id="guide">
 			<div class="wrapper">
 				<div id="article">
-					<h1><%= current_page.data.title %></h1>
+					<h1 class="title"><%= current_page.data.title %></h1>
 					<%= yield %>
 				</div>
 				<ul id="sidebar">
