--- a/source/localizable/ios/calorie.html.erb
+++ b/source/localizable/ios/calorie.html.erb
@@ -10,7 +10,7 @@ header: light
 		<h2><%= I18n.t("calorie_ios.device") %></h2>
 	</div>
 </section>
-<section id="calorie_ios_screenshot">
+<section id="product_screenshot">
 	<img alt="<%= I18n.t("calorie_ios.screenshot.alt") %>" src="<%= data.site.image_base_url %>/<%= I18n.t("calorie_ios.screenshot.src") %>">
 </section>
 <section id="calorie_ios_benefit">
