--- a/source/localizable/iphone/track.html.erb
+++ b/source/localizable/iphone/track.html.erb
@@ -10,7 +10,7 @@ header: light
     <h2><%= I18n.t("track_iphone.device") %></h2>
   </div>
 </section>
-<section id="track_iphone_screenshot">
+<section id="product_screenshot">
 	<img alt="<%= I18n.t("track_iphone.screenshot.alt") %>" src="<%= data.site.image_base_url %>/<%= I18n.t("track_iphone.screenshot.src") %>">
 </section>
 <section id="track_iphone_why">
