--- a/source/localizable/mac/calorie.html.erb
+++ b/source/localizable/mac/calorie.html.erb
@@ -10,7 +10,7 @@ header: light
 		<h2><%= I18n.t("calorie_mac.device") %></h2>
 	</div>
 </section>
-<section id="calorie_mac_screenshot">
+<section id="product_screenshot">
 	<img alt="<%= I18n.t("calorie_mac.screenshot.alt") %>" src="<%= data.site.image_base_url %>/<%= I18n.t("calorie_mac.screenshot.src") %>">
 </section>
 <section id="calorie_mac_benefit">
