optimize wuhoo logo and social account

--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -8,17 +8,17 @@
 		</h2>
 		<ul>
 			<li>
-				<a title="<%= I18n.t :email %>" href="/">
+				<a title="<%= I18n.t :email %>" href="mailto:wuhoo@danthought.com">
 					<i class="fa fa-envelope"></i>
 				</a>
 			</li>
 			<li>
-				<a title="<%= I18n.t :weibo %>" href="/">
+				<a title="<%= I18n.t :weibo %>" href="http://weibo.com/wuhooapp">
 					<i class="fa fa-weibo"></i>
 				</a>
 			</li>
 			<li>
-				<a title="<%= I18n.t :twitter %>" href="/">
+				<a title="<%= I18n.t :twitter %>" href="http://twitter.com/wuhooapp">
 					<i class="fa fa-twitter"></i>
 				</a>
 			</li>
