--- a/source/localizable/support.html.erb
+++ b/source/localizable/support.html.erb
@@ -12,21 +12,21 @@ name: support
 			</a>
 		</div>
 		<div class="item">
-			<a title="<%= I18n.t "support.email.title" %>" href="/">
+			<a title="<%= I18n.t "support.email.title" %>" href="mailto:wuhoo@danthought.com">
 				<i class="fa fa-send"></i>
 				<h4><%= I18n.t "support.email.title" %></h4>
 				<p><%= I18n.t "support.email.description" %></p>
 			</a>
 		</div>
 		<div class="item">
-			<a title="<%= I18n.t "support.weibo.title" %>" href="/">
+			<a title="<%= I18n.t "support.weibo.title" %>" href="http://weibo.com/wuhooapp">
 				<i class="fa fa-weibo"></i>
 				<h4><%= I18n.t "support.weibo.title" %></h4>
 				<p><%= I18n.t "support.weibo.description" %></p>
 			</a>
 		</div>
 		<div class="item">
-			<a title="<%= I18n.t "support.twitter.title" %>" href="/">
+			<a title="<%= I18n.t "support.twitter.title" %>" href="http://twitter.com/wuhooapp">
 				<i class="fa fa-twitter"></i>
 				<h4><%= I18n.t "support.twitter.title" %></h4>
 				<p><%= I18n.t "support.twitter.description" %></p>
