sitemap, links for campaign and press kit zip

--- a/source/localizable/ios/calorie.html.erb
+++ b/source/localizable/ios/calorie.html.erb
@@ -39,5 +39,5 @@ header: light
 	<a href="<%= I18n.t("calorie_ios.campaign") %>" title="<%= I18n.t("calorie_ios.buy") %>"><%= I18n.t("calorie_ios.download") %></a>
 </section>
 <section id="calorie_ios_secondary">
-	<a href="<%= I18n.t("calorie_ios.press_kit_zip") %>" title="<%= I18n.t("calorie_ios.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("calorie_ios.press_kit") %></a>
+	<a href="<%= data.site.image_base_url %>/<%= I18n.t("calorie_ios.press_kit_zip") %>" title="<%= I18n.t("calorie_ios.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("calorie_ios.press_kit") %></a>
 </section>
