--- a/source/localizable/iphone/track.html.erb
+++ b/source/localizable/iphone/track.html.erb
@@ -45,5 +45,5 @@ header: light
 	<a href="<%= I18n.t("track_iphone.campaign") %>" title="<%= I18n.t("track_iphone.buy") %>"><%= I18n.t("track_iphone.download") %></a>
 </section>
 <section id="track_iphone_secondary">
-	<a href="<%= I18n.t("track_iphone.press_kit_zip") %>" title="<%= I18n.t("track_iphone.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("track_iphone.press_kit") %></a>
+	<a href="<%= data.site.image_base_url %>/<%= I18n.t("track_iphone.press_kit_zip") %>" title="<%= I18n.t("track_iphone.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("track_iphone.press_kit") %></a>
 </section>
